apply plugin: 'java'
apply plugin: 'eclipse'

repositories
{
	mavenCentral();
}

sourceCompatibility=18
targetCompatibility=18

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
}

dependencies
{
	// JUnit 4 Support
	testImplementation "junit:junit:4.13.2"
	testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.9.0"
  	
  	// JUnit 5
  	testImplementation "org.junit.jupiter:junit-jupiter-api:5.9.0"
	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.9.0"
		
	// Asssert J
	testImplementation "org.assertj:assertj-core:3.23.1"
	
	// Parameterized tests
	testImplementation "org.junit.jupiter:junit-jupiter-params:5.9.0"
	
	// Migration Support to Enable Rules in JUnit 5
	testImplementation "org.junit.jupiter:junit-jupiter-migrationsupport:5.9.0"
}

// JUnit 5 aktivieren
test {
    useJUnitPlatform()

	// für die Beispiele wollen wir Fehler nicht als Build-Fehler werten, da die Beispiel
	// bewusst ein paar Fehler integriert haben
  	ignoreFailures = true
  	
  	// $\mbox{\bfseries Anzeige der Testresultate auf der Konsole }$
    testLogging {
        events "passed", "skipped", "failed"
    }
}


tasks.withType(Test) {
	    
	// $\mbox{\bfseries Testergebnisse im Browser öffnen}$
    doLast {
        File file = file("$buildDir/reports/tests/test/index.html")
	    java.awt.Desktop.desktop.browse file.toURI()
    }
}